@@ -175,6 +175,8 @@ void Preferences::reset() {
 	mouse_left_click_function = "";
 	mouse_double_click_function = "fullscreen";
 	mouse_middle_click_function = "mute";
+	mouse_xbutton1_click_function = "";
+	mouse_xbutton2_click_function = "";
 	wheel_function = Seeking;
 
 	recents_max_items = 10;
@@ -396,6 +398,8 @@ void Preferences::save() {
 	set->setValue("mouse_left_click_function", mouse_left_click_function);
 	set->setValue("mouse_double_click_function", mouse_double_click_function);
 	set->setValue("mouse_middle_click_function", mouse_middle_click_function);
+	set->setValue("mouse_xbutton1_click_function", mouse_xbutton1_click_function);
+	set->setValue("mouse_xbutton2_click_function", mouse_xbutton2_click_function);
 	set->setValue("wheel_function", wheel_function);
 
 	set->setValue("recents_max_items", recents_max_items);
@@ -618,6 +622,8 @@ void Preferences::load() {
 	mouse_left_click_function = set->value("mouse_left_click_function", mouse_left_click_function).toString();
 	mouse_double_click_function = set->value("mouse_double_click_function", mouse_double_click_function).toString();
 	mouse_middle_click_function = set->value("mouse_middle_click_function", mouse_middle_click_function).toString();
+	mouse_xbutton1_click_function = set->value("mouse_xbutton1_click_function", mouse_xbutton1_click_function).toString();
+	mouse_xbutton2_click_function = set->value("mouse_xbutton2_click_function", mouse_xbutton2_click_function).toString();
 	wheel_function = set->value("wheel_function", wheel_function).toInt();
 
 	recents_max_items = set->value("recents_max_items", recents_max_items).toInt();
